# errbit-rs

./: Cargo.toml  README.md
src/: client.rs  config.rs  error.rs  lib.rs  notice.rs  notifier.rs
